--- a/Dance Dance Evolution/LaunchScreen/Base.lproj/LaunchScreen.storyboard
+++ b/Dance Dance Evolution/LaunchScreen/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14306.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14278.2"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo_OxfordUniversityMMM" translatesAutoresizingMaskIntoConstraints="NO" id="Avb-g3-tZ7">
-                                <rect key="frame" x="20" y="283.5" width="335" height="100"/>
+                                <rect key="frame" x="153" y="321.5" width="69" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="b1N-tl-ohK"/>
                                 </constraints>
@@ -28,8 +28,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Avb-g3-tZ7" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="32a-J7-UQ5"/>
-                            <constraint firstAttribute="trailing" secondItem="Avb-g3-tZ7" secondAttribute="trailing" constant="20" id="Vtz-Bg-bX2"/>
-                            <constraint firstItem="Avb-g3-tZ7" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="ca8-Ua-SwY"/>
+                            <constraint firstItem="Avb-g3-tZ7" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="sVF-Ef-zoe" secondAttribute="trailing" constant="-20" id="Vtz-Bg-bX2"/>
+                            <constraint firstItem="Avb-g3-tZ7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="sVF-Ef-zoe" secondAttribute="leading" constant="20" id="ca8-Ua-SwY"/>
                             <constraint firstItem="Avb-g3-tZ7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="kA0-Qf-UKh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sVF-Ef-zoe"/>
@@ -41,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo_OxfordUniversityMMM" width="288" height="100"/>
+        <image name="Logo_OxfordUniversityMMM" width="69.120002746582031" height="24"/>
     </resources>
 </document>
