--- a/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
+++ b/Dance Dance Evolution/Main/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pQx-Ca-anq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KMz-sC-C3b">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,31 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="Oe1-7g-Ftx">
+            <objects>
+                <viewController id="KMz-sC-C3b" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e86-1A-que">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yD2-Ko-zSJ">
+                                <rect key="frame" x="131" y="269" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="pQx-Ca-anq" kind="presentation" animates="NO" id="hpF-bn-sZa"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="pXf-i1-y73"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kSK-Jg-7TZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-587" y="-716"/>
+        </scene>
         <!--Dna Controller-->
         <scene sceneID="miD-aN-5Mi">
             <objects>
@@ -18,36 +43,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.20000000000000001" maximumZoomScale="2" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1my-pb-ycH" customClass="DnaScrollView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" minimumZoomScale="0.20000000000000001" maximumZoomScale="2" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1my-pb-ycH" customClass="DnaScrollView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
                                 <rect key="frame" x="60" y="35" width="240" height="503"/>
                                 <color key="backgroundColor" white="0.91366117290000004" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pE-40-XSE">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q1e-ks-CeG" customClass="DnaView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
+                                <rect key="frame" x="20" y="35" width="40" height="503"/>
+                                <color key="backgroundColor" white="0.84943100742009114" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-QY-qJT" userLabel="Button2">
+                                <rect key="frame" x="20" y="538" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="dismissView:" destination="pQx-Ca-anq" eventType="touchUpInside" id="eDG-4e-bUf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4C-cQ-hol" userLabel="Button3">
+                                <rect key="frame" x="137" y="538" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="WAJ-wE-sfC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="testBtn:" destination="pQx-Ca-anq" eventType="touchUpInside" id="HZ7-fh-7cD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3pE-40-XSE">
                                 <rect key="frame" x="254" y="538" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="Byh-Td-wFb"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="btnTap:" destination="pQx-Ca-anq" eventType="touchUpInside" id="8WO-M7-ncc"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q1e-ks-CeG" customClass="DnaView" customModule="Dance_Dance_Evolution" customModuleProvider="target">
-                                <rect key="frame" x="20" y="35" width="40" height="503"/>
-                                <color key="backgroundColor" white="0.84943100742009114" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="q6c-AZ-dBn"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="1my-pb-ycH" firstAttribute="top" secondItem="GGT-7L-QCD" secondAttribute="top" constant="15" id="3UO-sw-QG9"/>
-                            <constraint firstAttribute="bottom" secondItem="1my-pb-ycH" secondAttribute="bottom" constant="30" id="75e-zs-EbX"/>
-                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="leading" secondItem="GGT-7L-QCD" secondAttribute="leading" constant="20" id="Io6-fq-U07"/>
-                            <constraint firstItem="1my-pb-ycH" firstAttribute="leading" secondItem="Q1e-ks-CeG" secondAttribute="trailing" id="NOH-PE-zN3"/>
-                            <constraint firstItem="1my-pb-ycH" firstAttribute="trailing" secondItem="OLR-cw-27m" secondAttribute="trailing" constant="-20" id="brF-9O-BoZ"/>
-                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="top" secondItem="GGT-7L-QCD" secondAttribute="top" constant="15" id="cfO-w7-Mpp"/>
-                            <constraint firstItem="1my-pb-ycH" firstAttribute="leading" secondItem="Q1e-ks-CeG" secondAttribute="trailing" id="dbg-tB-4ym"/>
-                            <constraint firstItem="GGT-7L-QCD" firstAttribute="bottom" secondItem="Q1e-ks-CeG" secondAttribute="bottom" constant="30" id="shT-Ed-ItK"/>
+                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="leading" secondItem="GGT-7L-QCD" secondAttribute="leading" constant="20" id="0sb-f1-6vp"/>
+                            <constraint firstItem="n9h-QY-qJT" firstAttribute="top" secondItem="1my-pb-ycH" secondAttribute="bottom" id="1Hd-pB-AyG"/>
+                            <constraint firstItem="1my-pb-ycH" firstAttribute="bottom" secondItem="GGT-7L-QCD" secondAttribute="bottom" constant="-30" id="306-G1-eMb"/>
+                            <constraint firstItem="g4C-cQ-hol" firstAttribute="top" secondItem="1my-pb-ycH" secondAttribute="bottom" id="6he-XS-Orf"/>
+                            <constraint firstItem="n9h-QY-qJT" firstAttribute="leading" secondItem="GGT-7L-QCD" secondAttribute="leading" constant="20" id="8FE-cT-hMw"/>
+                            <constraint firstItem="1my-pb-ycH" firstAttribute="leading" secondItem="Q1e-ks-CeG" secondAttribute="trailing" id="9ei-8v-15Y"/>
+                            <constraint firstItem="1my-pb-ycH" firstAttribute="trailing" secondItem="GGT-7L-QCD" secondAttribute="trailing" constant="-20" id="AzF-ZO-fvo"/>
+                            <constraint firstItem="1my-pb-ycH" firstAttribute="leading" secondItem="OLR-cw-27m" secondAttribute="leading" constant="60" id="KUy-t1-bHG"/>
+                            <constraint firstItem="GGT-7L-QCD" firstAttribute="trailing" secondItem="3pE-40-XSE" secondAttribute="trailing" constant="20" id="Mhe-fF-h3z"/>
+                            <constraint firstItem="g4C-cQ-hol" firstAttribute="centerX" secondItem="OLR-cw-27m" secondAttribute="centerX" id="UVO-vV-GUU"/>
+                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="top" secondItem="GGT-7L-QCD" secondAttribute="top" constant="15" id="XbI-eF-rOT"/>
+                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="bottom" secondItem="1my-pb-ycH" secondAttribute="bottom" id="fqx-rF-dcw"/>
+                            <constraint firstItem="3pE-40-XSE" firstAttribute="top" secondItem="1my-pb-ycH" secondAttribute="bottom" id="ghp-yT-AvW"/>
+                            <constraint firstItem="Q1e-ks-CeG" firstAttribute="top" secondItem="1my-pb-ycH" secondAttribute="top" id="kDt-RJ-eGt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GGT-7L-QCD"/>
                     </view>
@@ -389,7 +436,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <switch opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="right" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5K2-Hz-Fxf" userLabel="SoundSwitch" customClass="ResizableSwitch" customModule="Dance_Dance_Evolution" customModuleProvider="target">
-                                                                <rect key="frame" x="231" y="0.0" width="51" height="31"/>
+                                                                <rect key="frame" x="243.75" y="3.875" width="38.916666666666657" height="23.25"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="scale">
                                                                         <real key="value" value="0.75"/>
@@ -573,7 +620,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <switch opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="right" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="80n-oM-iHu" userLabel="ToleranceVisibilitySwitch" customClass="ResizableSwitch" customModule="Dance_Dance_Evolution" customModuleProvider="target">
-                                                                <rect key="frame" x="231" y="0.0" width="51" height="31"/>
+                                                                <rect key="frame" x="243.75" y="3.875" width="38.916666666666657" height="23.25"/>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="scale">
                                                                         <real key="value" value="0.75"/>
